# rustful

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/generator/: mod.rs  render.rs  template.rs
