[package]
name = "rustful"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
comrak = "0.15.0"
glob = "0.3.0"
serde = {version = "1.0.147", features = ["derive"]}
serde_json = "1.0.87"
tera = "1.17.1"
toml = "0.5.9"

